--- a/views/admin/createClub.pug
+++ b/views/admin/createClub.pug
@@ -23,7 +23,11 @@ html(lang="en")
                             a(href="/admin/new") Create Club 
             div.msg=`Welcome ${user.full_name}`
             .dropdown 
-                div.account.drop-btn 
+                if user.profil_pic == ""
+                    img(src=`../assets/avatar/default.png`, alt="Profile Avatar" class="account")
+                else
+                    img(src=`../assets/avatar/${user.profil_pic || "default.png"}`, alt="Profile Avatar" class="account")
+                div.drop-btn 
                 div.dropdown-content 
                     a.dropdown-item(href="/users/account") Account 
                     a.dropdown-item(href="/users/account/setting") Setting 
